--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ button.cesium-infoBox-close {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
+    z-index:10005;
 }
 
 #slide_menu2{
@@ -204,7 +205,7 @@ input {
 /*ジオコーディング*/
 
 .geocode {
-	opacity:0.7;
+	opacity:1;
 	position:absolute;
 	top:18px;
 	left:55px;
@@ -212,10 +213,12 @@ input {
 }
 
 .textbox {
+    vertical-align: text-top;
+    background-color: azure;
 	border:0;
 	margin:0px;
-	padding:0px 0px 1px 2px;
-	font-size:12px;
+	padding:0px 0px 0px 0px;
+	font-size:13px;
 	width:100px;
 	height:15px;
 }
@@ -295,7 +298,10 @@ input {
 
 .pulldown {
     position: absolute;
+    opacity:0.7
     z-index: 100;
     top: 10%;
     left: 1%;
+    background-color: azure;
+    
 }
